--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "express": "^4.17.1",
         "peer": "^0.5.3",
         "socket.io": "^2.3.0",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "vercel": "^34.2.0"
     }
 }
